<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_mainmenu"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainmenu_title1"
        android:id="@+id/mainmenu_title1"
        android:textSize="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/paused_title2"
        android:id="@+id/paused_title2"
        android:textSize="22dp"
        android:layout_below="@+id/mainmenu_title1"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/BlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_returngame"
        android:id="@+id/button_returngame"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_returnmainmenu"
        android:layout_alignStart="@+id/button_returnmainmenu"
        android:layout_alignEnd="@+id/button_returnmainmenu" />

    <Button
        style="@style/RedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_returnmainmenu"
        android:id="@+id/button_returnmainmenu"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/paused_title2"
        android:layout_alignEnd="@+id/mainmenu_title1"
        android:layout_alignStart="@+id/mainmenu_title1" />

    <ImageView
        android:contentDescription="@string/leopard_alt"
        android:src="@drawable/ball_leopard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:contentDescription="@string/leopard_alt"
        android:src="@drawable/ball_leopard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
